correcting detail sections on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -117,7 +117,6 @@ h5 {
 	}
 }
 
-summary::-moz-list-bullet {
-  list-style-type: none;
-   display: block;
+details summary::-webkit-details-marker {
+  display:none;
 }
